wireguard-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wireguard
  namespace: wireguard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wireguard
  template:
    metadata:
      labels:
        app: wireguard
    spec:
      containers:
      - name: wireguard
        image: linuxserver/wireguard:latest
        volumeMounts:
        - name: config
          mountPath: /config
        securityContext:
          capabilities:
            add:
            - NET_ADMIN
            - SYS_MODULE
      volumes:
        - name: config
          emptyDir: {}
