wireguard-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wireguard
  namespace: wireguard
spec:
  type: LoadBalancer
  ports:
  - port: 51820
    protocol: UDP
    targetPort: 51820
    name: wireguard
  selector:
    app: wireguard
